@@ -4,6 +4,7 @@ https://github.com/resident-uhlig/chrome-hyperiums7/issues
 XXXX-XX-XX XX:XX:XX Version 0.5.0
 * Added link to Beka's hyperiums tools for planet history on Trading map
 * Added link to Beka's hyperiums tools for player history on Ranking page
+* Added population size for each planet on global exploitations manager
 
 2014-01-16 21:35:00 Version 0.4.0
 * Added total upkeep for trading relations, factories, infiltrations and counter-infiltrations on cash page
